# learnAutomake

./: Makefile.am  README  configure  configure.ac  hello.c  main.c
